# learnopengl

./: .clangd  .gitignore  CMakeLists.txt  conanfile.py
include/glad/: glad.h
src/: glad.c  main.cpp
src/output/: main
